# Vexile

./: .clang-format  .gitignore  CMakeLists.txt  PocoMacros.cmake
Game/: CMakeLists.txt
Game/include/Game/: GameBase.hpp  GameState.hpp
Game/include/Game/Common/: BitFlag.hpp  EventEmitter.hpp  Formatter.hpp  LinePosition.hpp  NonCopyable.hpp  ScopedInstance.hpp  VCharBuffer.hpp
Game/include/Game/EventMan/: EventManager.hpp
Game/include/Game/Graphics/Animation/: AnimationHandler.hpp
Game/include/Game/Math/: Angle.hpp  Matrix.hpp  Matrix.inl  TRS.hpp  Vector.hpp  Vector.inl
Game/include/Game/ResMan/: AssetManager.hpp  Cheatsheet.hpp
Game/include/Game/ResMan/Prop/: IProperty.hpp  PropertyManager.hpp  TProperty.hpp
Game/src/: Game.cpp
Game/src/Common/: EventEmitter.cpp  Formatter.cpp  LinePosition.cpp  VCharBuffer.cpp
Game/src/Graphics/Animation/: AnimationHandler.cpp
Game/src/Math/: Angle.cpp  TRS.cpp
Game/src/ResMan/: AssetManager.cpp  Cheatsheet.cpp  Game.cpp
Game/src/ResMan/Prop/: PropertyManager.cpp
src/: main.cpp
